# nmkgn

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  index.html  package-lock.json  package.json  pyproject.toml  railway.toml
.github/workflows/: ci.yml
.kdbp/: BEHAVIOR.md  CHANGES.jsonl  DECISIONS.md  DEPLOYMENTS.md  DEVIATIONS.md  DOCS.md  ENTITIES.md  KNOWLEDGE.md  LEDGER.md  MAINTENANCE.md  PENDING.md  PLAN.md  PORTS.md  PUSH.md  REVIEW.md  ROADMAP.md  RULES.md  SCOPE.md  STRUCTURE.md  VALUES.md  scope-references.yaml
.kdbp/archive/: completed_PLAN_2026-05-14_product-backbone-case-flow.md  completed_PLAN_2026-05-15_document-upload-text-extraction.md  completed_PLAN_2026-05-18_normalize-consumer-credit-facts.md  completed_PLAN_2026-05-26_consumer-credit-analysis.md  completed_PLAN_2026-05-27_after-signing-discrepancy-path.md  completed_PLAN_2026-05-27_before-signing-review-path.md
api/: __init__.py  config.py  main.py
api/agents/: __init__.py  consumer_credit.py  document_receptionist.py
api/migrations/: alembic.ini  env.py
api/models/: __init__.py  analysis.py  case.py  document.py  extraction.py  receptionist.py  reference.py
api/routes/: analysis.py  cases.py  documents.py  export.py  facts.py  receptionist.py
docker/: compose.yml
docs/: AGENTS_USE.md  SCALING.md  V0_ALIGNMENT.md  architecture-patterns.md  architecture.md
manual-test-cases/: .gitignore  README.md  base-degradation-scenario.md  catalog.example.yml  run_catalog.py
manual_test_cases/: __init__.py  baseline.py
src/: Proto.tsx  index.css  main.tsx
(+142 files in other folders)
