[project]
name = "nmkgn-api"
version = "0.1.0"
description = "FastAPI backend for nmkgn"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.14.0",
  "fastapi>=0.115.6",
  "psycopg[binary]>=3.2.3",
  "pypdf>=6.0.0",
  "python-multipart>=0.0.20",
  "sqlalchemy>=2.0.36",
  "uvicorn[standard]>=0.34.0",
]

[dependency-groups]
dev = [
  "httpx>=0.28.1",
  "pytest>=8.3.4",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests/api"]
