[project]
name = "nmkgn-api"
version = "0.1.0"
description = "FastAPI backend for nmkgn"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.14.0",
  "fastapi>=0.115.6",
  "psycopg[binary]>=3.2.3",
  "pydantic-ai>=1.97.0",
  "pymupdf>=1.27.2.3",
  "pypdf>=6.0.0",
  "python-multipart>=0.0.20",
  "sqlalchemy>=2.0.36",
  "uvicorn[standard]>=0.34.0",
]

[dependency-groups]
dev = [
  "httpx>=0.28.1",
  "playwright>=1.52.0",
  "pytest>=8.3.4",
  "pytest-playwright>=0.7.0",
  "ruff>=0.11.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests/api"]
markers = ["e2e: End-to-end browser tests (requires playwright browsers installed)"]
